<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/female_image"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/user_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/course_tips" />

        <TextView
            android:id="@+id/course_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/course_tip"
            app:layout_constraintStart_toEndOf="@id/user_photo"
            app:layout_constraintTop_toBottomOf="@id/welcome_user"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/attendance_task_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp"
        android:visibility="gone"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/task_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attendance_info"
                android:textSize="18sp"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/destination_location"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/task_info"
                app:layout_constraintStart_toStartOf="@id/task_info"/>

            <TextView
                android:id="@+id/curr_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/curr_location"
                android:textSize="14sp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@id/location"
                app:layout_constraintStart_toStartOf="@id/location"/>

            <TextView
                android:id="@+id/error_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="请到指定位置完成签到"
                android:visibility="gone"
                android:textColor="#910101"
                android:padding="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/curr_location"
                app:layout_constraintStart_toStartOf="@id/location"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <Button
                android:id="@+id/sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/sign_in"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/post_task_info_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        android:padding="8dp"
        android:layout_margin="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/attendance_task_tip">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/post_task_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/current_task_info"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/task_countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/countdown"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/countdown" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textSize="16sp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="取消任务"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@id/post_task_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/post_task_info_cv"/>


</androidx.constraintlayout.widget.ConstraintLayout>